<resources>
    <string name="app_name">Ваши Доходы Здесь!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_salary">Вид заработка</string>
    <string name="money">Объем заработка</string>
    <string name="lets_go_button">Перейти к заполнению \n полной информации</string>
    <string name="edit">Изменить</string>
    <string name="date">Дата</string>
    <string name="bank">Банк</string>
    <string name="welcome">Так запомним же ваши доходы!</string>
    <string name="goList">К списку доходов</string>
</resources>