<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/back">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:background="@drawable/fo"
        />
    <EditText
        android:id="@+id/type_salary_ET2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_salary"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/money_ET2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/money"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/my_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>
    <EditText
        android:id="@+id/bankET2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bank"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/dateET2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="date"
        android:minHeight="48dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/editBut"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/edit"
            android:background="@drawable/but3"
            android:layout_marginEnd="40dp"
            android:textAllCaps="false"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingBut"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/backikon"
            tools:ignore="SpeakableTextPresentCheck"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

</LinearLayout>