<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1"
    android:padding="15dp"
    android:background="@drawable/back">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginBottom="150dp"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold|italic"/>
            <EditText
                android:id="@+id/type_salary_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_salary"
                android:inputType="text"
                android:minHeight="48dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <EditText
                    android:id="@+id/money_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/money"
                    android:inputType="number"
                    android:layout_weight="1"
                    tools:ignore="TouchTargetSizeCheck" />
                <Spinner
                    android:id="@+id/my_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>



            <Button
                android:id="@+id/button_f1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button"
                android:text="@string/lets_go_button"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/button_f1_2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button"
                android:text="@string/goList"
                android:textAllCaps="false"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>